--- a/myproject/myapp/templates/user_form.html
+++ b/myproject/myapp/templates/user_form.html
@@ -86,6 +86,15 @@
         button:hover {
             background-color: #0056b3;
         }
+
+        .errorlist {
+            color: #fff;
+            padding: 10px;
+            border-radius: 4px;
+            text-align: center;
+            background-color: #ff4d4d;
+            margin-bottom: 20px;
+        }
     </style>
 </head>
 <body>
